--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "homepage": ".",
-  "name": "react-typescript-starter-pack",
+  "homepage": "https://GabrielMaksimovich.github.io/test-app-rest-api",
+  "name": "test-app-rest-api",
   "version": "0.1.0",
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "^5.11.13",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
@@ -10,9 +13,11 @@
     "@types/node": "^12.20.10",
     "@types/react": "^17.0.4",
     "@types/react-dom": "^17.0.3",
+    "bulma": "^0.9.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.9",
     "typescript": "^4.2.4",
     "typescript-eslint-parser": "^22.0.0",
     "web-vitals": "^1.1.1"
@@ -47,7 +52,7 @@
   "devDependencies": {
     "@mate-academy/eslint-config-react-typescript": "^0.0.4",
     "eslint": "^7.25.0",
-    "gh-pages": "^3.1.0",
+    "gh-pages": "^3.2.3",
     "node-sass": "^5.0.0"
   }
 }
